==> klaus-liebler/sensact/firmware/sensactHsIO/Src/spilcd16bit.cc <==
#include "spilcd16bit.hh"
#include <algorithm>
#include <cstdarg>
#include <stdio.h>
#include <string.h>
#include "gpio.hh"
#include "stm32f0xx_hal_conf.h"
#include "stm32f0xx_ll_dma.h"
#include "stm32f0xx_ll_spi.h"
#include "stm32f0xx_ll_utils.h"

void SPILCD16bit::writecommand(uint8_t c) {
	while (LL_SPI_IsActiveFlag_BSY(spi))
		__NOP();
	Gpio::Set(_dc, false);
	LL_SPI_TransmitData8(spi, c);
}

void SPILCD16bit::writedata(uint8_t c) {

	while (LL_SPI_IsActiveFlag_BSY(spi))
		__NOP();
	Gpio::Set(_dc, true);
	LL_SPI_TransmitData8(spi, c);
}

void SPILCD16bit::writedata16(uint16_t d) {

	while (LL_SPI_IsActiveFlag_BSY(spi))
		__NOP();
	Gpio::Set(_dc, true);
	uint8_t d1 = (uint8_t) (d >> 8);
	LL_SPI_TransmitData8(spi, d1);
	uint8_t d2 = (0xFF) & d;
	while (LL_SPI_IsActiveFlag_BSY(spi))
		__NOP();
	LL_SPI_TransmitData8(spi, d2);

}

void SPILCD16bit::begin(void) {
	Gpio::Set(_cs, false);
	if (_rst != Pin::NO_PIN) {
		Gpio::Set(_rst, false);
		LL_mDelay(250);//min 10us according to datasheet
		Gpio::Set(_rst, true);
		LL_mDelay(250); //min 120ms according to datasheet
	}
	LL_DMA_ConfigAddresses(
			DMA1, dmaChannel, (uint32_t) buffer, LL_SPI_DMA_GetRegAddr(spi),
			LL_DMA_DIRECTION_MEMORY_TO_PERIPH);
	LL_SPI_Enable(spi);
	beginInternal();
}

void SPILCD16bit::fillRect(int16_t x, int16_t y, int16_t w, int16_t h) {
	if(!w || !h) return;
	if(w < 0) {                         // If negative width...
		x +=  w + 1;                    //   Move X to left edge
		w  = -w;                        //   Use positive width
	}
	if(x >= _width) return;
	if(h < 0) {                     // If negative height...
		y +=  h + 1;                //   Move Y to top edge
		h  = -h;                    //   Use positive height
	}
	if(y >= _height) return;
	int16_t x2 = x + w - 1;
	if(x2 < 0) return;
	int16_t y2 = y + h - 1;
	if(y2 < 0) return;
	// Rectangle partly or fully overlaps screen
	if(x  <  0)       { x = 0; w = x2 + 1; } // Clip left
	if(y  <  0)       { y = 0; h = y2 + 1; } // Clip top
	if(x2 >= _width)  { w = _width  - x;   } // Clip right
	if(y2 >= _height) { h = _height - y;   } // Clip bottom
	while (this->bufferFillerMode != BufferfillerMode::NONE)
		__NOP(); //wait till a previous process has been finished;
	setAddr(x, y, w, h);

	this->bufferFillerMode = BufferfillerMode::RECT;
	this->bufferStep = w * h;
	while (LL_SPI_IsActiveFlag_BSY(spi)) //as long as the setAddr last byte is transmitted
		__NOP();
	Gpio::Set(_dc, true);
	Gpio::Set(_cs, false);
	this->fillRectCb();

	//	for (int i=0;i<(int)w*h;i++) {
	//		writedata16(color);
	//	}

}

PrintStringError SPILCD16bit::printString(int16_t cursor_x, int16_t cursor_y, Anchor anchorType, const char *format, ...) {

	//cursor_x und cursor_y definieren eine Ankerposition. In welche Richtung ab dort der Text geschrieben wird, bestimmt anchorType
	if(!this->font) return PrintStringError::NO_FONT_SET;
	if(BUFFER_SIZE_BYTES/2 < this->_width) return PrintStringError::BUFFER_TOO_SMALL;

	va_list va;
	va_start(va, format);
	this->strLength=vsnprintf(strBuffer, STRING_BUFFER_SIZE_CHARS, format, va);
	va_end(va);

	while (this->bufferFillerMode != BufferfillerMode::NONE)
		__NOP(); //wait till a previous process has been finished;

	getTextBoundsCropped(strBuffer, cursor_x, cursor_y, anchorType);
	if(windowHeight==0 || windowWidth==0){
		return; //text completely out of visible area
	}

	setAddr(windowStartX, windowStartY, windowWidth, windowHeight);
	this->bufferFillerMode = BufferfillerMode::STRING;
	this->bufferStep = windowHeight;

	while (LL_SPI_IsActiveFlag_BSY(spi)) //as long as the setAddr last byte is transmitted
		__NOP();

	Gpio::Set(_dc, true);
	Gpio::Set(_cs, false);
	this->printStringCb();
	return;
}

void SPILCD16bit::printStringCb() {
	uint16_t *buffer16 = (uint16_t *) buffer;
	size_t length = 0;
	size_t cidx = 0;

	while(cidx<strLength)
	{
		uint8_t c = strBuffer[cidx];
		GFXglyph *glyph  = &(font->glyph[c-font->first]);
		uint8_t  *bitmap = font->bitmap;
		uint16_t bo = glyph->bitmapOffset;
		uint8_t  w  = glyph->width, //of bitmap
				h  = glyph->height; //of bitmap
		int8_t   xo = glyph->xOffset, //of bitmap
				yo = glyph->yOffset; //negativ!!

		//cursor_x/y zeigen auf den Punkt ganz links auf der Baseline
		//BufferStep gibt an, wie viele Zeilen noch fehlen bis zur letzten Zeile

		//TODO: Erst mit jenem Buchstaben beginnen, der als erstes sichtbar ist
		//und dann auch erst mit dem Pixel, das sichtbar ist

		for(int8_t xx=0; xx<glyph->xAdvance;xInGlyph++)
		{
			volatile bool bit=false;
			//Prüfung, ob wir innerhalb der Bitmap sind
			//cursor_y=baseline
			//wenn wir gerade oberhalb der Baseline sind, dass ist baseline2currentLine negativ
			int16_t baseline2currentLine=(this->windowHeight-this->bufferStep)-(this->cursor_y- this->windowStartY);
			if(xx>=xo && xx<xo+w && baseline2currentLine >= yo && baseline2currentLine < yo+h)
			{
				volatile int line_in_bitmap = baseline2currentLine-yo;
				int bitindex = (line_in_bitmap*w+(xx-xo));
				int byteindex = bitindex >> 3;
				int bitinbyte = bitindex & 0x7;
				bit = (bitmap[bo+byteindex] << bitinbyte) & 0x80;
			}
			buffer16[length] = bit?this->foregroundColor:this->backgroundColor;
			length++;
		}



		cidx++;
	}

	this->bufferStep--;
	length *= 2;
	LL_DMA_SetDataLength(DMA1, this->dmaChannel, length);
	LL_DMA_EnableChannel(DMA1, this->dmaChannel);
}
